# exercise-3

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pnpm-lock.yaml  turbo_readme.md  vectordb_extension.sh
airflow/dags/: sbir_etl_dag.py
apps/api-server/: Dockerfile.api  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api-server/prisma/: schema.prisma
apps/api-server/prisma/migrations/20250622151322_init_solicitations/: migration.sql
apps/api-server/src/: trpc.ts
apps/api-server/src/lib/: sbir.ts  sync.ts
apps/api-server/src/router/: index.ts  sbir-records.ts
apps/api-server/src/server/: db.ts
apps/api-server/sync-worker/: ReadMe.md  index.ts  sync-sbir.ts
apps/web/: .dockerignore  Dockerfile.web  globals.css  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/solicitation/[id]/: page.tsx
sbir-etl/: .dockerignore  .flaskenv  Dockerfile.etl  pyproject.toml
sbir-etl/sbir_loader/: ReadMe.md  config.py
sbir-etl/sbir_loader/db/: alembic.ini  engine.py
sbir-etl/sbir_loader/db/alembic/: env.py
sbir-etl/sbir_loader/db/alembic/versions/: 1d6c08427722_updated_solicitation_docs_again.py  5a24175e7ba1_create_solicitation_topics_table.py  84d407129f0f_add_topic_is_open_topic_is_closed.py  a2405e0e50ef_initial_schema.py  f7f3458c53f9_add_solicitation_documents_table.py
sbir-etl/sbir_loader/db/models/: document.py  solicitation.py  topic.py
sbir-etl/sbir_loader/etl/: app.py  fetcher.py  schema.py
sbir-etl/sbir_loader/repository/: solicitation.py
